fix cotainer ids

--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-md-11 chart-container bubbletree-container">
                 <div id="bubble-1" class="bubbletree-wrapper view-main">
-                    <div class="bubbletree" id="bubbletree-1"></div>
+                    <div class="bubbletree" id="bubbletree1"></div>
                 </div>
                 <div id="pie" class="view-alternative"></div>
                 <div id="bar" class="view-alternative"></div>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-7">
             <div class="col-md-11 chart-container bubbletree-container">
-                <div class="bubbletree-wrapper view-main">
+                <div id="bubble-2" class="bubbletree-wrapper view-main">
                     <div class="bubbletree" id="bubbletree2"></div>
                 </div>
                 <div id="pie2" class="view-alternative"></div>
@@ -115,7 +115,7 @@
             <div class="chart-update col-md-1 float-left">
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         id="chart-bubble-1"
-                        data-chartcontainer="bubbletree2"></span>
+                        data-chartcontainer="bubble-2"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
                         pma-fg-gray toggle-chart" data-chartcontainer="pie2"></span>
                     <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="bar2"></span>
