--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -64,28 +64,18 @@
                     <span class="pma-icon pe-7s-bubble pma-fg-gray toggle-chart"
                         aria-hidden="true" data-chartcontainer="bubble-1"></span>
                     <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                        pma-fg-gray toggle-chart" data-chartcontainer="ejecutado"></span>
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="tipo"></span>
+                        pma-fg-gray toggle-chart" data-chartcontainer="pie"></span>
+                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="bar"></span>
             </div>
 
             <div class="col-md-11 bubbletree-container chart-container">
                 <div id="bubble-1" class="bubbletree-wrapper view-main">
                     <div class="bubbletree"></div>
                 </div>
-                <div id="ejecutado" class="view-alternative"> Pastel Ejecucion por
+                <div id="pie" class="view-alternative"> Pastel Ejecucion por
                 Rubros </div>
-                <div id="ejecutado_pie" class="view-alternative"> Barras Ejecucion por
+                <div id="bar" class="view-alternative"> Barras Ejecucion por
                 Rubros </div>
-                <div id="tipo" class="view-alternative"> Chart will be rendered here
-                </div>
-                <div id="comparativo_anios" class="view-alternative"> Chart will be rendered here
-                </div>
-                <div id="comparativo2" class="view-alternative"> Chart will be rendered here
-                </div>
-                <div id="comparativo3" class="view-alternative"> Chart will be rendered here
-                </div>
-                <div id="ogm_tipo_column" class="view-alternative"> Chart will be rendered here
-                </div>
             </div>
         </div>
         <div class="col-md-5 table-responsive">
@@ -732,9 +722,5 @@
 {% endblock %}
 
 {% block custom_scripts %}
-    {% if municipio and charts.4 %}
-        {{ charts|load_charts:"ejecutado, comparativo_anios, comparativo2, comparativo3, tipo, ogm_tipo_column" }}
-    {% else %}
-       {{ charts|load_charts:"ejecutado, comparativo_anios, comparativo2, comparativo3, tipo, ogm_tipo_column" }}
-    {% endif %}
+    {{ charts|load_charts:"pie,bar" }}
 {% endblock %}
