--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -68,26 +68,15 @@
                 aria-hidden="true" id="chart-bubble-1" data-chartcontainer="bubble-1"></span>
                 <span id="chart-pie-1" class="pma-icon pe-7s-graph
                 pma-fg-gray toggle-chart" aria-hidden="true"
-                data-chartcontainer="ejecutado"></span>
-                {% if not municipio %}
-                <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="comparativo2"></span>
-                {% else %}
-                <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="ejecutado_column"></span>
-                {% endif %}
+                data-chartcontainer="pie"></span>
+                <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray toggle-chart" data-chartcontainer="bar"></span>
             </div>
             <div class="col-md-11 bubbletree-container chart-container">
                 <div id="bubble-1" class="bubbletree-wrapper view-main ">
                     <div class="bubbletree"></div>
                 </div>
-                <div id="ejecutado" class="view-alternative"> Pastel Ejecucion por
-                    Rubros </div>
-                <div id="ejecutado_column" class="view-alternative "> Barras Ejecucion por
-                        Rubros </div>
-                {% if not municipio %}
-                <div id='comparativo2' class="view-alternative"> Chart will be rendered here </div>
-                {% else %}
-                <div id='comparativo_anios' class="view-alternative"> Chart will be rendered here </div>
-                {% endif %}
+                <div id="pie" class="view-alternative "> </div>
+                <div id='bar' class="view-alternative"> </div>
             </div>
         </div>
         <div class="col-md-5 general-table table-responsive">
@@ -671,9 +660,5 @@
 {% endblock %}
 
 {% block custom_scripts %}
-    {% if municipio and charts.4 %}
-    {{ charts|load_charts:"ejecutado, ejecutado_column, comparativo_anios, tipo, asignado_barra, barra" }}
-    {% else %}
-    {{ charts|load_charts:"ejecutado, ejecutado_column,tipo,comparativo_anios" }}
-    {% endif %}
+    {{ charts|load_charts:"pie,bar" }}
 {% endblock %}
