--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -34,7 +34,7 @@
                     <div class="col-xs-9 col-sm-5 col-md-3 indicadores">
                         <span class="pma-fg-light-green titsearch"><strong>Indicador</strong></span>
                         <select name="indicador" class="indicator" id="indicator">
-                           <option value="">Resumen Municipal</option>
+                           <option value="resumen-municipal">Resumen Municipal</option>
                            <option value="oim" {% if 'oim' in request.GET.indicador %}selected{% endif %}>Origen de los ingresos del municipio</option>
                            <option value="ogm" {% if 'ogm' in request.GET.indicador %}selected{% endif %}>Destino del gasto municipal</option>
                            <option value="inversion-categoria" {% if 'inversion-categoria' in request.GET.indicador %}selected{% endif %}>Inversiones</option>
@@ -48,21 +48,20 @@
                     <div class="col-xs-8 col-sm-4 col-md-2">
                       <span class="pma-fg-light-green titsearch"><strong>MUNICIPIO</strong></span>
                       <select class="municipio pull-right" name="municipio">
-                            <optgroup>
-                            <option value="">Todos</option>
-                            </optgroup>
-                          {% regroup municipios by depto as departamentos %}
-                          {% for departamento in departamentos %}
-                          <optgroup label="{{ departamento.grouper }}">
-                              {% for m in departamento.list %}
-                              <option value="{{ m.slug }}" 
-                              {% ifequal request.GET.municipio m.slug %}
-                              selected="selected"
-                              {% endifequal %}>
-                              {{ m.nombre }}
-                          </option>
-                          {% endfor %}
-                      </optgroup>
+                        <optgroup>
+                        <option value="">Todos</option>
+                        </optgroup>
+                        {% regroup municipios by depto as departamentos %}
+                        {% for departamento in departamentos %}
+                        <optgroup label="{{ departamento.grouper }}">
+                            {% for m in departamento.list %}
+                            <option value="{{ m.slug }}"
+                            {% ifequal request.GET.municipio m.slug %}
+                            selected="selected"
+                            {% endifequal %}>
+                            {{ m.nombre }}
+                        </option>
+                        {% endfor %}
                       {% endfor %}
                   </select>
                     </div>
