prepare bubble style as toxonomy by main group, expenses and income

--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -672,6 +672,8 @@
     <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
     <script type="text/javascript" src="http://assets.openspending.org/openspendingjs/master/lib/aggregator.js"></script>
     <script type="text/javascript" src="{% static 'js/cofog.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/income.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/expense.js' %}"></script>
     <script type="text/javascript">
             var data1 = {{ bubble_data_1|safe }};
             var data2 = {{ bubble_data_2|safe }};
