--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -206,6 +206,8 @@
     <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
     <script type="text/javascript" src="http://assets.openspending.org/openspendingjs/master/lib/aggregator.js"></script>
     <script type="text/javascript" src="{% static 'js/cofog.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/income.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/expense.js' %}"></script>
     <script type="text/javascript">
             var data = {{ bubble_data|safe }};
     </script>
