--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -254,7 +254,7 @@
                                 <span class="line-cifra">{{ row.asignado_percent|intcomma }}
                                 </span><br/>
                             {% else %}
-                              <span class="line-cifra">{{ row.asignado_percent|intcomma }}</span>
+                              <span class="line-cifra">{{ row.ejecutado_percent|intcomma }}</span>
                             {% endif %}
                         </a>
                     </li>
