--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -245,7 +245,7 @@
                 <ol>
                     {% for row in otros|dictsortreversed:"asignado_percent" %}
                     <li>
-                        <a href="#0"
+                        <a href=""
                             data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}"
                             {% if municipio.slug == row.ingreso__municipio__slug%} class="selected"{% endif %}
                             style="left: {{ forloop.counter|mul:180 }}px;"><span class="posicion"> {{forloop.counter}}</span>
